# Transfer_message

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
data_files/: data.txt
include/: buff.hpp  data.hpp  data_generator.hpp  reader.hpp  transfer.hpp  writer.hpp
scr/: CMakeLists.txt  buff.cpp  data.cpp  data_generator.cpp  reader.cpp  transfer.cpp  writer.cpp
