#---------------------------------------------------------------------#
#------------------------Установка версии Cmake ----------------------#
#---------------------------------------------------------------------#
cmake_minimum_required(VERSION 3.5)
#---------------------------------------------------------------------#
#----------------------------Данные проекта --------------------------#
#---------------------------------------------------------------------#
project(Massage_transfer
        VERSION 0.0.1
        DESCRIPTION ""
        LANGUAGES CXX)
#---------------------------------------------------------------------#
#----------------------Установка стандарта языка ---------------------#
#---------------------------------------------------------------------#
set(CMAKE_CXX_STANDARD 20)
#---------------------------------------------------------------------#
#--------------Установка директории для исполняемого файла -----------#
#---------------------------------------------------------------------#
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/app)
#---------------------------------------------------------------------#
#------------------------Добавление директорий -----------------------#
#---------------------------------------------------------------------#
add_subdirectory(scr)
add_subdirectory(app)
