#---------------------------------------------------------------------#
#------------------Установка имени исполняемго файла -----------------#
set(PROJECT application)
#---------------------------------------------------------------------#
#---------------------Установка исполняемого файла -------------------#
set(PROJECT_SOURCE app.cpp)
#---------------------------------------------------------------------#
#------------------Поиск и загрузка настроек проекта -----------------#
find_package(Threads REQUIRED)
#---------------------------------------------------------------------#
#---------------------Добавление исполняемго файла -------------------#
add_executable(${PROJECT}
        ${PROJECT_SOURCE})
#---------------------------------------------------------------------#
#--------------------------Линковка библиотек ------------------------#
target_link_libraries(${PROJECT} datagen)
#---------------------------------------------------------------------#
#---------------------------------------------------------------------#