#---------------------------------------------------------------------#
#------------------Установка имени исполняемго файла -----------------#
set(PROJECT application)
#---------------------------------------------------------------------#
#---------------------Установка исполняемого файла -------------------#
set(PROJECT_SOURCE app.cpp)
#---------------------------------------------------------------------#
#------------------Поиск и загрузка настроек проекта -----------------#
find_package(Threads REQUIRED)
#---------------------------------------------------------------------#
#---------------------Добавление исполняемго файла -------------------#
add_executable(${PROJECT}
        ${PROJECT_SOURCE})
#---------------------Добавление файла данных ------------------------#
file(COPY ${PROJECT_SOURCE_DIR}/data_files/data.txt
        DESTINATION ${CMAKE_BINARY_DIR}/app)
#---------------------------------------------------------------------#
#--------------------------Линковка библиотек ------------------------#
target_link_libraries(${PROJECT} datagen)
#---------------------------------------------------------------------#
#---------------------------------------------------------------------#