#---------------------------------------------------------------------#
#----------------------Установка имени библиотеки --------------------#
set(LIB_NAME datagen)
#---------------------------------------------------------------------#
#---------------------------Вывод сообщений --------------------------#
message("-- CREATE LIB")
message("-- LIB_NAME: ${LIB_NAME}")
message("-- BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
#---------------------------------------------------------------------#
#----------------------Установка стандарта языка ---------------------#
set(CMAKE_CXX_STANDARD 20)
#---------------------------------------------------------------------#
#-------------------Определение заголовочных файлов ------------------#
set(LIB_PATH ${PROJECT_SOURCE_DIR}/include)
set(HEADER_LIST ${LIB_PATH}/data.hpp
        ${LIB_PATH}/buff.hpp
        ${LIB_PATH}/writer.hpp
        ${LIB_PATH}/reader.hpp
        ${LIB_PATH}/transfer.hpp)
#---------------------------------------------------------------------#
#------------------Поиск и загрузка настроек проекта -----------------#
find_package(Threads REQUIRED)
#---------------------------------------------------------------------#
#---------------------Установка исполняемых файлов -------------------#
set(SOURCE writer.cpp
        buff.cpp
        reader.cpp
        transfer.cpp)
#---------------------------------------------------------------------#
#-------------------------Добовление библиотеки ----------------------#
add_library(${LIB_NAME}
        ${SOURCE}
        ${HEADER_LIST})
#---------------------------------------------------------------------#
#---------------------Задать подключаемые каталоги -------------------#
target_include_directories(${LIB_NAME} PUBLIC
        ${LIB_PATH})
#---------------------------------------------------------------------#
#----------------Добавить ожидаемые функции компилятора --------------#
target_compile_features(${LIB_NAME} PUBLIC
        cxx_std_20)
#---------------------------------------------------------------------#
#---------------------------------------------------------------------#